// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`🧪 BUTTON: style tests: with basic button: should render with correct styles 1`] = `
.emotion-0 {
  cursor: pointer;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: capitalize;
  padding: 10px 30px;
  border-radius: 200px;
  font-weight: 500;
  outline: none;
  -webkit-transition: background-color 500ms;
  transition: background-color 500ms;
  border: 2px solid var(--color-primary);
  background-color: transparent;
  color: var(--color-primary);
}

.emotion-0:hover {
  background-color: var(--color-primary);
  color: var(--color-white);
}

<button
  className="emotion-0"
  onClick={[Function]}
  type="button"
>
  test
</button>
`;

exports[`🧪 BUTTON: style tests: with full button: should render with correct styles 1`] = `
.emotion-0 {
  cursor: pointer;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: capitalize;
  padding: 10px 30px;
  border-radius: 200px;
  font-weight: 500;
  outline: none;
  -webkit-transition: background-color 500ms;
  transition: background-color 500ms;
  border: 2px solid var(--color-primary);
  background-color: var(--color-primary);
  color: var(--color-white);
}

.emotion-0:hover {
  background-color: var(--color-dark-primary);
}

<button
  className="emotion-0"
  onClick={[Function]}
  type="button"
>
  test
</button>
`;

exports[`🧪 BUTTON: style tests: with submit button should render with correct styles 1`] = `
.emotion-0 {
  cursor: pointer;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: capitalize;
  padding: 10px 30px;
  border-radius: 200px;
  font-weight: 500;
  outline: none;
  -webkit-transition: background-color 500ms;
  transition: background-color 500ms;
  border: 2px solid var(--color-primary);
  background-color: var(--color-primary);
  color: var(--color-white);
}

.emotion-0:hover {
  background-color: var(--color-dark-primary);
}

<button
  className="emotion-0"
  type="submit"
>
  test
</button>
`;
